--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint": "^8.37.0",
     "nuxt": "^3.3.3",
     "nuxt-simple-sitemap": "^2.4.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "unocss": "^0.50.6",
+    "sass": "^1.60.0"
   }
 }
